WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133732
Wrap NSURLRequest in bundle API
https://bugs.webkit.org/show_bug.cgi?id=133732
Summary
Wrap NSURLRequest in bundle API
Antti Koivisto
Reported
2014-06-11 04:48:01 PDT
We don't want to construct actual NSURLRequests in web process side unless really needed.
Attachments
patch
(12.90 KB, patch)
2014-06-11 04:55 PDT
,
Antti Koivisto
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2014-06-11 04:52:52 PDT
<
rdar://problem/17267217
>
Antti Koivisto
Comment 2
2014-06-11 04:55:50 PDT
Created
attachment 232861
[details]
patch
WebKit Commit Bot
Comment 3
2014-06-11 04:57:09 PDT
Attachment 232861
[details]
did not pass style-queue: ERROR: Source/WebKit2/WebProcess/InjectedBundle/API/mac/WKWebProcessPlugInBrowserContextController.mm:230: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andreas Kling
Comment 4
2014-06-11 08:27:20 PDT
Comment on
attachment 232861
[details]
patch This patch makes me happy!
Alexey Proskuryakov
Comment 5
2014-06-11 10:13:38 PDT
Antti landed this in <
http://trac.webkit.org/changeset/169807
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug