Wrap NSURLRequest in bundle API https://bugs.webkit.org/show_bug.cgi?id=133732 <rdar://problem/17267217>

Reviewed by Andreas Kling.

Patch by Dan Bernstein.

We don't want to construct actual NSURLRequests in the web process side unless really needed as it is slow.

* Shared/Cocoa/APIObject.mm:
(API::Object::newObject):
* Shared/Cocoa/WKNSURLRequest.h: Added.
(WebKit::wrapper):
* Shared/Cocoa/WKNSURLRequest.mm: Added.

    Add a wrapper object that initializes the underlying NSURLRequest on-demand.

(-[WKNSURLRequest _web_createTarget]):
(-[WKNSURLRequest URL]):
(-[WKNSURLRequest copyWithZone:]):
* WebKit2.xcodeproj/project.pbxproj:
* WebProcess/InjectedBundle/API/mac/WKWebProcessPlugInBrowserContextController.mm:
(willSendRequestForFrame):
(didInitiateLoadForResource):



Canonical link: https://commits.webkit.org/151709@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169807 268f45cc-cd09-0410-ab3c-d52691b4dbfc